--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
       <!-- navigation of website  -->
       <nav class="mobile-menu">
-        <label for="show-menu" class="show-menu"
+        <section for="show-menu" class="show-menu"
           ><span></span>
           <section class="lines"></section
-        ></label>
+        ></section>
         <input type="checkbox" id="show-menu" />
         <ul id="menu">
           <li><a href="./product.html">Product</a></li>
@@ -42,7 +42,7 @@
 
     <main class="home-main">
       <section class="video-part">
-        <video class="video" autoplay="autoplay" control="hidden">
+        <video class="video" autoplay>
             <source src="video/Innovative Sports Technology-pc.mp4"
                           type="video/mp4" />
             <source src="video/Innovative Sports Technology-pc.ogg"
@@ -135,9 +135,9 @@
                   <figure>
                   <img src="img/SMART-BALL.png" class="article-img" alt="SMART-BALL" title="Smart Ball" />
                   <figcaption>Smart Cricket Ball</figcaption>
+		</figure>
           </section>
         </section>
-      </section>
 
       <!-- aside part -->
       <section class="aside-box">
@@ -163,8 +163,8 @@
     </main>
 
     <footer>
-      <section>&copy; 2022 Md Asif Iqbal</section>
-      <section class="cookie">Cookie Statement</section>
+      <span>&copy; 2022 Md Asif Iqbal</span>
+      <span class="cookie">Cookie Statement</span>
     </footer>
   </body>
 </html>
