--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
                           type="video/mp4" />
             <source src="video/Innovative Sports Technology-pc.ogg"
                           type="video/ogg" />
-            <source src="video/Innovative Sports Technology-mobile.mp4"
-                          type="video/mp4" media="all and (max-width: 480 px)" />
-            <source src="video/Innovative Sports Technology-mobile.ogg"
-                          type="video/ogg" media="all and (max-width: 480 px)" />
         </video>
       </section>
 
@@ -138,6 +134,7 @@
 		</figure>
           </section>
         </section>
+	</section>
 
       <!-- aside part -->
       <section class="aside-box">
