--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <!-- navigation of website  -->
       <nav class="mobile-menu">
-        <section for="show-menu" class="show-menu"
+        <section class="show-menu"
           ><span></span>
           <section class="lines"></section
         ></section>
@@ -43,10 +43,10 @@
     <main class="home-main">
       <section class="video-part">
         <video class="video" autoplay>
-            <source src="video/Innovative Sports Technology-pc.mp4"
-                          type="video/mp4" />
-            <source src="video/Innovative Sports Technology-pc.ogg"
-                          type="video/ogg" />
+            <source src="./video/Innovative Sports Technology-pc.mp4" type="video/mp4" />
+            <source src="./video/Innovative Sports Technology-pc.ogg" type="video/ogg" />
+            <source src="./video/Innovative Sports Technology-mobile.mp4" type="video/mp4" media="all and (max-width: 480 px)" />
+            <source src="./video/Innovative Sports Technology-mobile.ogg" type="video/ogg" media="all and (max-width: 480 px)" />
         </video>
       </section>
 
