--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   If user have any question regarding new technology then they can send us the question the user wants to know.  " />
   <meta name="keywords" content="Tech, new innovation, best features, Tech price, Tech use" />
     
-    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/LOGO.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>Contact</title>
   </head>
@@ -18,7 +18,7 @@
     <header>
       <section class="first-header">
         <a class="logo" href="index.html">
-          <img src="./img/logo.png" class="logo-img" alt="Future Tech Co." title="logo"/>
+          <img src="./img/LOGO.png" class="logo-img" alt="Future Tech Co." title="logo"/>
         </a>
         <section class="heading-part">
           <h1 class="first-heading">Future Tech Co.</h1>
@@ -28,10 +28,10 @@
 
       <!-- navigation of website  -->
       <nav class="mobile-menu">
-        <label for="show-menu" class="show-menu"
+        <section class="show-menu"
           ><span></span>
           <section class="lines"></section
-        ></label>
+        ></section>
         <input type="checkbox" id="show-menu" />
         <ul id="menu">
           <li><a href="./index.html">Home</a></li>
@@ -53,17 +53,18 @@
 
               <section class="input-box">
                 <label for="name">Name</label>
-                <input type="text" name="name" />
+                <input type="text" name="name" id="name"/>
               </section>
 
               <section class="input-box">
-                <label for="lname">Email</label>
-                <input type="email" name="email" value="" />
+                <label for="email">Email</label>
+                <input type="email" name="email" value="email" id="email"/>
               </section>
 
               <section class="input-box">
-                <label for="message">Your Message</label>
-                <input type="message-box" name="message-box" />
+				<strong>Your Message</strong>
+				<textarea name="message" rows="10" cols="30">
+				</textarea>
               </section>
 
               <section class="button">
