--- a/product.html
+++ b/product.html
@@ -28,10 +28,10 @@
 
       <!-- navigation of website  -->
       <nav class="mobile-menu">
-        <label for="show-menu" class="show-menu"
+        <section  class="show-menu"
           ><span></span>
           <section class="lines"></section
-        ></label>
+        ></section>
         <input type="checkbox" id="show-menu" />
         <ul id="menu">
           <li><a href="./index.html">Home</a></li>
