--- a/product.html
+++ b/product.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<meta charset="UTF-8" />
+<html dir="ltr" lang="en">
 
   <head>
+	  <meta charset="UTF-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Md Asif Iqbal" />
   <meta name="description" content="This is a tech website that will help the user to find the newest and best technology developed in recent years. 
