--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <main class="home-main">
       <section class="video-part">
         <video class="video" autoplay>
-            <source src="./video/Innovative Sports Technology-pc.mp4" type="video/mp4"/>
-            <source src="./video/Innovative Sports Technology-pc.ogg" type="video/ogg"/>
-            <source src="./video/Innovative Sports Technology-mobile.mp4" type="video/mp4" media="all and (max-width: 480 px)"/>
-            <source src="./video/Innovative Sports Technology-mobile.ogg" type="video/ogg" media="all and (max-width: 480 px)"/>
+            <source src="./video/Innovative-Sports-Technology-pc.mp4" type="video/mp4"/>
+            <source src="./video/Innovative-Sports-Technology-pc.ogg" type="video/ogg"/>
+            <source src="./video/Innovative-Sports-Technology-mobile.mp4" type="video/mp4" />
+            <source src="./video/Innovative-Sports-Technology-mobile.ogg" type="video/ogg" />
         </video>
       </section>
 
